added footer. changed some stuff for the project cards. changed how the resume buttons look.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
     <nav>
       <a href="#" class="nav__link">
-        <h1 class="nav__name">Christian Pettet</h1>
+        <h2 class="nav__name">Christian Pettet</h2>
       </a>
       <ul class="nav__links">
         <li class="about nav__link-active"><a class="nav__link" href="#about">About</a></li>
-        <li class="skills-and-tech"><a class="nav__link" href="#skills-and-tech">Skills and Tech</a></li>
+        <li class="skills-and-tech"><a class="nav__link" href="#skills-and-tech">Skills</a></li>
         <li class="projects"><a class="nav__link" href="#projects">Projects</a></li>
         <li class="contact"><a class="nav__link" href="#contact">Contact</a></li>
         <li class="resume"><a class="nav__link" href="#resume">Resume</a></li>
@@ -61,7 +61,7 @@
         </div>
       </section>
   
-      <h1 class="section__header">My Skills & Technologies</h1>
+      <h1 class="section__header">My Skills</h1>
       <section id="skills-and-tech">
         <div class="skills__container">
           <div class="skill">
@@ -281,7 +281,7 @@
               <img class="image" src="images/freezuh-screens/screenshot-freezuh-final-transformation.herokuapp.com-2021.09.07-00_36_06.png" alt="screenshot of website" />
             </a>
             <div class="inner">
-              <h4>Freezuh, Final Transformation</h4>
+              <h3>Freezuh, Final Transformation</h3>
               <p>
                 A biospecimen storage and retrieval application for a biotech
                 company. Users can accession samples and store them in
@@ -300,7 +300,7 @@
                 <li class="inner__link">
                   <a href="https://freezuh-final-transformation.herokuapp.com/">
                     <i class="fas fa-link"></i>
-                    <span class="label">Link</span>
+                    <span class="label">Live Link</span>
                   </a>
                 </li>
               </ul>
@@ -311,7 +311,7 @@
               ><img class="image" src="images/like-or-hate-screens/screenshot-like-or-hate.herokuapp.com-2021.09.07-00_53_55.png" alt="screenshot of website"
             /></a>
             <div class="inner">
-              <h4>Like Or Hate</h4>
+              <h3>Like Or Hate</h3>
               <p>
                 An Instagram clone with additional functionality allowing users
                 to democratically delete posts or comments. Co-developed AWS S3
@@ -332,7 +332,7 @@
                 <li class="inner__link">
                   <a href="https://like-or-hate.herokuapp.com/">
                     <i class="fas fa-link"></i>
-                    <span class="label">Link</span>
+                    <span class="label">Live Link</span>
                   </a>
                 </li>
               </ul>
@@ -343,7 +343,7 @@
               ><img src="images/folk-genius-screens/screenshot-folk-genius.herokuapp.com-2021.09.07-00_58_11.png" alt="" class="image"
             /></a>
             <div class="inner">
-              <h4>Folk Genius</h4>
+              <h3>Folk Genius</h3>
               <p>
                 A Genius clone focused on folk and indie music. Users can add, 
                 update, and delete tracks. For any song, users can add their
@@ -361,7 +361,7 @@
                 <li class="inner__link">
                   <a href="https://folk-genius.herokuapp.com/">
                     <i class="fas fa-link"></i>
-                    <span class="label">Link</span>
+                    <span class="label">Live Link</span>
                   </a>
                 </li>
               </ul>
@@ -372,7 +372,7 @@
               ><img src="images/taco-tea-screens/screenshot-taco-tea-group.herokuapp.com-2021.09.07-01_00_05.png" alt="" class="image"
             /></a>
             <div class="inner">
-              <h4>Taco Tea</h4>
+              <h3>Taco Tea</h3>
               <p>
                 A Medium clone focused on food, specifically tacos. Users 
                 can share their food experiences and recipes. Users can interact
@@ -390,7 +390,7 @@
                   <li class="inner__link">
                     <a href="https://taco-tea-group.herokuapp.com/">
                       <i class="fas fa-link"></i>
-                      <span class="label">Link</span>
+                      <span class="label">Live Link</span>
                     </a>
                   </li>
                 </ul>
@@ -438,7 +438,7 @@
               class="link link__primary"
               href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=pdf"
               >
-              <i class="fas fa-file-pdf"></i>PDF</a
+              <i class="fas fa-file-pdf"></i> PDF</a
             >
           </li>
           <li class="actions__link">
@@ -446,18 +446,24 @@
               class="link"
               href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=doc"
               >
-              <i class="fas fa-file-word"></i>DOC</a
+              <i class="fas fa-file-word"></i> DOC</a
             >
           </li>
           <li class="actions__link">
             <a
               class="link"
               href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=txt"
-              ><i class="fas fa-file-alt"></i>TXT</a
+              ><i class="fas fa-file-alt"></i> TXT</a
             >
           </li>
         </ul>
       </section>
     </div>
+    <footer>
+      <div class="footer__text__container">
+        <p class="footer__text">© Copyright Christian Pettet</p>
+        <a class="footer__text" href="https://github.com/cpettet/cpettet.github.io">Source</a>
+      </div>
+    </footer>
   </body>
 </html>
