Mobile responsiveness. Nav link coloring.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
       <section id="about" class="about">
         <div class="about__wrapper__image">
           <img class="avatar" src="/images/avatar.jpg" alt="zoomed-in photo of Christian Pettet" />
+          <div class="avatar__links">
+            <ul class="avatar__links__list">
+              <li class="avatar__links__link"><a href="https://github.com/cpettet"><i class="fab fa-github"></i></a></li>
+              <li class="avatar__links__link"><a href="https://www.linkedin.com/in/christianpettet/"><i class="fab fa-linkedin-in"></i></a></li>
+              <li class="avatar__links__link"><a href="mailto:cpettet11@gmail.com"><i class="far fa-envelope"></i></a></li>
+              <li class="avatar__links__link"><a href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=pdf"><i class="fas fa-file-pdf"></i></a></li>
+            </ul>
+          </div>
         </div>
         <div class="about__wrapper__paragraphs">
           <p class="about__paragraph">
@@ -51,7 +59,7 @@
           <p class="about__paragraph">
             I enjoy pair-programming with others on a team, or tackling issues
             on my own. I prefer direct face-to-face feedback from others. I'm
-            always learning, and I love picking tricks from 
+            committed to a lifetime of learning and self-reflection.
           </p>
           <p class="about__paragraph">
             My home away from home is the gym where I enjoy powerlifting. I enjoy
@@ -59,6 +67,12 @@
             and dog on adventures, listening to music, and starting new DIY projects
             (ask me about the bathroom renovation).
           </p>
+            <li class="actions__link"><a
+              class="link link__primary"
+              href="https://docs.google.com/document/d/1Lavqjm9BagGHZ3yGDsbESVYyZm0hpVLA4JD3Q9RQU-g/export?format=pdf"
+              >
+              <i class="fas fa-file-pdf"></i> Download My Resume</a>
+              </li>
         </div>
       </section>
   
